# doter

./: .gitignore  Cargo.toml  README.md
.github/workflows/: release.yml
packaging/aur/doter-bin/: .SRCINFO  PKGBUILD
packaging/linux/: doter.desktop
scripts/: migrate-shared-layer.py  next-version.sh  package-release.sh  set-version.sh  update-aur-metadata.sh
src/: app.rs  git.rs  lib.rs  main.rs  model.rs  operations.rs  scanner.rs  state.rs  ui.rs
