[package]
name = "doter"
version = "0.1.5"
edition = "2024"
description = "A simple GTK4 GUI for managing dotfiles with Git"
repository = "https://github.com/qwlp/doter"
license = "MIT"

[dependencies]
anyhow = "1.0"
dirs = "6.0"
gio = "0.21"
git2 = "0.20"
glib = "0.21"
gtk4 = "0.10"
serde = { version = "1.0", features = ["derive"] }
similar = "2.7"
toml = "0.9"

[dev-dependencies]
tempfile = "3.23"
